[project]
name = "yop-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.28.1",
    "mcp[cli]>=1.6.0",
    "gmssl>=3.2.2",
    "cryptography>=42.0.0"
]

[tool.uv.workspace]
members = [
    "yop-mcp",
]
